--- a/public/plate.html
+++ b/public/plate.html
@@ -15,7 +15,8 @@
     <div class="width-container">
 
       <div id="header">
-        <h3 class="header-underline">Mix N' Match</h3>      
+        <a href="http://github.com/skryl/xkcd-knapsack"><img src="images/github.png"></a>
+        <h3 class="header-underline">XKCD Knapsack</h3>      
       </div>
 
       <div id="graphic">
