added modal readme

--- a/public/plate.html
+++ b/public/plate.html
@@ -9,6 +9,7 @@
 <body>
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="js/simple-modal.min.js"></script>
   <script src="js/menu.js"></script>
 
   <div id="main">
@@ -49,6 +50,17 @@
   <script src="js/circle_pack.js"></script>
   <script src="js/drag_and_drop.js"></script>
   <script src="js/main.js"></script>
+
+  <div id="basic-modal-content">
+    <h3> Welcome, </h3>
+    <p> To use the Knapsack Solver, simply drag a well formatted menu file into the
+        outlined plate area. For formatting instructions follow the github link
+        to the README. </p>
+    <p> Thanks for visiting! </p>
+  </div>
+  <div style='display:none'>
+    <img src='images/x.png' alt='' />
+  </div>
 </body>
 </html>
 
