fixed bug, readme updates, tests

--- a/public/plate.html
+++ b/public/plate.html
@@ -25,7 +25,7 @@
         <div id="fork"><img src="images/fork.png"></div>
 
         <div id="plate">
-          <div id="working"><h2>Nom nom nom nom...</h2></div>
+          <div id="working"><h2>Working...</h2></div>
         </div>
 
         <div id="knife"><img src="images/knife.png"></div>
